<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.second.SecondActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/navy_blue_700"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        tools:alpha="100"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/john_doe"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        app:layout_constraintStart_toStartOf="parent"
        tools:alpha="100"/>

    <TextView
        android:id="@+id/tv_selected_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_user"
        android:textColor="@color/navy_blue_700"
        android:textSize="18sp"
        android:layout_marginHorizontal="20dp"
        android:labelFor="@+id/ed_palindrome"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/TextHeadline3"
        tools:alpha="100"/>


    <Button
        android:id="@+id/bt_choose_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_user"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:alpha="0"
        style="@style/Widget.App.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:alpha="100"
        />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/second_screen"
            app:navigationIcon="@drawable/ic_arrow_back_24px"
            style="@style/Widget.App.Toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>